data/collection/fixes/descriptions/scala/scala-7782
```scala
package pack

object Test1 {
  import TestIteratee1._

  def foo(empty: Any): Any = ???

  foo(empty = ???)
}

object TestIteratee1
  extends TestEnumeratorTFunctions
     with TestEnumeratorPFunctions

trait TestEnumeratorT {
  def map[BB](f: Int => BB)
}

abstract class TestEnumeratorP[E, F[_]] {

  def test[B](f: Int => B): Any = {
    (null: TestEnumeratorT).map(f)
    ???
  }
}

trait TestEnumeratorPFunctions {
  def empty[E, F[_]]: TestEnumeratorP[E, F] = ???
}

trait TestEnumeratorTFunctions {
  def empty[E, F[_]](implicit a: Any): Any = ???
}
```

```
 /code/scala scalac-hash e67a039 /Users/jason/code/scratch3/src/main/scala/pack/TestEnumeratorP.scala
[info] e67a039 => /Users/jason/usr/scala-v2.11.0-M1-393-ge67a039
warning: there were 3 feature warnings; re-run with -feature for details
one warning found
  /code/scala scalac-hash f3cdf14 /Users/jason/code/scratch3/src/main/scala/pack/TestEnumeratorP.scala[info] f3cdf14 => /Users/jason/usr/scala-v2.10.0-463-gf3cdf14
warning: there were 3 feature warnings; re-run with -feature for details
one warning found
  /code/scala scalac-hash df8de9063 /Users/jason/code/scratch3/src/main/scala/pack/TestEnumeratorP.scala
[info] df8de9063 => /Users/jason/usr/scala-v2.11.0-M1-401-gdf8de90
/Users/jason/code/scratch3/src/main/scala/pack/TestEnumeratorP.scala:22: error: no type parameters for method map: (f: Int => BB)Unit exist so that it can be applied to arguments (Int => B)
 --- because ---
argument expression's type is not compatible with formal parameter type;
 found   : Int => B
 required: Int => ?BB
    (null: TestEnumeratorT).map(f)
                            ^
/Users/jason/code/scratch3/src/main/scala/pack/TestEnumeratorP.scala:22: error: type mismatch;
 found   : Int => B
 required: Int => BB
    (null: TestEnumeratorT).map(f)
                                ^
two errors found
  /code/scala git show df8de9063
commit df8de9063ce2008d2e23b46b6464abee03f75e5a
Merge: e67a039 f3cdf14
Author: Lukas Rytz <lukas.rytz@epfl.ch>
Date:   Mon Feb 4 11:32:14 2013 +0100

    Merge commit 'f3cdf146709e0dd98533ee77e8ca2566380cb932'

    Conflicts:
        src/compiler/scala/tools/nsc/typechecker/Contexts.scala
        src/compiler/scala/tools/nsc/typechecker/Namers.scala
        src/compiler/scala/tools/nsc/typechecker/Typers.scala
        src/continuations/plugin/scala/tools/selectivecps/CPSAnnotationChecker.scala
        src/reflect/scala/reflect/internal/AnnotationCheckers.scala
        src/reflect/scala/reflect/internal/Symbols.scala
```